ChangeLog for KNotes
====================

2001/07/09  Michael Brade <brade@informatik.uni-muenchen.de>

    * don't reread the knotesui.rc all the time a new note is created

2001/06/23  Michael Brade <brade@informatik.uni-muenchen.de>

    * fixed #18086 (add a size grip for the notes)
    * update the title layout if the font was changed

2001/06/17  Michael Brade <brade@informatik.uni-muenchen.de>

    * finished porting KNotes to the XMLGUI framework
    * fixed auto-indent
    * fixed the RMB menu

2001/06/11  Michael Brade <brade@informatik.uni-muenchen.de>

    * improved Configdialog:
      - use nicer and bigger icons
      - removed the size setting from the local note config dialog
      - #20172: separate font settings for title and body
    * don't reload the display setting if changing e.g. only the color -
      the note's geometry could have been changed already
    * fixed some bugs introduced by the QTextEdit port

2001/06/10  Michael Brade <brade@informatik.uni-muenchen.de>

    * if there's only one note jump to it immediately instead of
      showing the LMB menu

2001/06/10  Michael Brade <brade@informatik.uni-muenchen.de>

    * small bugfix: display "No notes" instead of nothing in the LMB
      menu if there are no notes anymore.

2001/06/10  Michael Brade <brade@informatik.uni-muenchen.de>

    * ported to QTextEdit
    * updated actions, removed the ActionProperties section for now

2001/06/05  Michael Brade <brade@informatik.uni-muenchen.de>

    * started to port KNotes to the XMLGUI framework (50% done)
    * dropped KSystemTray inheritance

2001/05/19  Michael Brade <brade@informatik.uni-muenchen.de>

    * fixed the session management bug (#22844)
    * added two more icons to the context menu
    * fixed the undo/redo: no more undo right after startup possible
    * improved the code for saving the notes a lot, saved a little
      memory by removing a now unneeded variable
